# McYfee

./: .env  .env_template  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  architecture.vsdx  dbmodel_mcyfee.mwb  folder_structure.md
docs/POC/: POC.py  POC_examples.docx  POC_tracker.py  POC_tracker_claude.py
scripts/: setup.sh  setup_db.sql
src/data/raw/: elgiganten_page.html  test_page.html
src/webtracker/: __main__.py  config.py  core.py  database.py  logger.py  main.py  notifier.py  report.py  scraper.py  test_scraping.py  thread.py  thread_test.py  threading.py  tracker.py  ui.py
src/webtracker/core/: __init__.py  tracker.py
src/webtracker/database/: __init__.py  database.py
src/webtracker/notifications/: discord_notifier.py
src/webtracker/reports/: __init__.py  report_generator.py
src/webtracker/scraper/: __init__.py  parser.py
src/webtracker/ui/: cli.py  helper.py  selections.py  validator.py
src/webtracker/utils/: __init__.py  input_validator.py  logger.py  performance.py
tests/: test_database.py  test_parser.py  test_performance.py  test_report_generator.py  test_scraper.py  test_tracker.py
