[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "McYfee"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
"annotated-types>=0.7.0",
"beautifulsoup4>=4.14.3",
"bs4>=0.0.2",
"certifi>=2026.1.4",
"charset-normalizer>=3.4.4",
"contourpy>=1.3.2",
"cycler>=0.12.1",
"dotenv>=0.9.9",
"filelock>=3.20.3",
"flake8>=7.3.0",
"fonttools>=4.61.1",
"idna>=3.11",
"kiwisolver>=1.4.9",
"lxml>=6.0.2",
"matplotlib>=3.10.8",
"mccabe>=0.7.0",
"mysql-connector-python>=9.5.0",
"numpy>=2.2.6",
"packaging>=26.0",
"pandas>=2.3.3",
"pillow>=12.1.0",
"pycodestyle>=2.14.0",
"pydantic>=2.12.5",
"pydantic_core>=2.41.5",
"pyflakes>=3.4.0",
"pyparsing>=3.3.2",
"pytest>=9.0.2",
"python-dateutil>=2.9.0.post0",
"python-dotenv>=1.2.1",
"requests>=2.32.5",
"requests-file>=3.0.1",
"seaborn>=0.13.2",
"six>=1.17.0",
"soupsieve>=2.8.3",
"tldextract>=5.3.1",
"typing-inspection>=0.4.2",
"typing_extensions>=4.15.0",
"tzdata>=2025.3",
"urllib3>=2.6.3"
]

[project.optional-dependencies]
dev = ["pytest", "flake8", "pytest-cov"]
# TO install: pip install .[dev]

[project.scripts]
mcyfee = "webtracker.main:run"